# lambda-builder

./: .gitignore  Dockerfile  Dockerfile.build  Dockerfile.hub  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  test.bats
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  codeql-analysis.yml  lint.yml  tagged-release.yml
builders/: dotnet.go  go.go  handler.go  main.go  nodejs.go  python.go  ruby.go
commands/: build.go
io/: main.go
tests/: README.md
tests/dotnet6/: Function.cs  test.bats  test.csproj  test.sln
tests/go/: go.mod  go.sum  test.bats
tests/hooks/: test.bats
tests/lambda.yml/: lambda.yml  test.bats
tests/lambda.yml-invalid-image/: Function.cs  lambda.yml
tests/lambda.yml-nonexistent-builder/: lambda.yml  test.sln
tests/npm/: function.js  index.js  package-lock.json  package.json  test.bats
tests/pip/: function.py  test.bats
tests/pip-runtime/: lambda_function.py  test.bats
tests/pipenv/: Pipfile  test.bats
tests/poetry/: pyproject.toml  test.bats
tests/ruby/: Gemfile  function.rb  test.bats
ui/: human_writer.go  zerolog_ui.go
