[tool.poetry]
name = "lambda"
version = "0.1.0"
description = "lambda project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">= 3.9"
requests = "^2.32.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
